# idf2svd

./: Cargo.toml
src/: cpp.rs  lib.rs  main.rs  parsing.rs
src/parser/: cpp.rs  esp_idf.rs  mod.rs  reg_addr.rs  soc.rs
